<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.sellerview.SellerPageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/sellProduceCta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="@string/market" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_8dp"
                android:backgroundTint="@color/secondary_green"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:layout_marginBottom="8dp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seller_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:inputType="textCapCharacters"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/gray"
                    android:hint="@string/john_doe" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_8dp"
                android:backgroundTint="@color/secondary_green"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loyalty_card_identifier"
                    android:layout_marginBottom="8dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/seller_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:inputType="textCapCharacters"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/gray"
                    android:hint="@string/id_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_8dp"
                android:backgroundTint="@color/secondary_green"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_marginBottom="8dp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/city_name_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/rounded_8dp"
                    android:backgroundTint="@color/white"
                    tools:entries="@array/dummy_data" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_8dp"
                android:backgroundTint="@color/secondary_green"
                android:padding="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gross_weight"
                    android:layout_marginBottom="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/produce_weight"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:digits="0123456789."
                        android:maxLength="8"
                        android:padding="8dp"
                        android:background="@drawable/rounded_8dp"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/gray"
                        android:hint="@string/weight_hint" />

                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintBaseline_toBaselineOf="@+id/produce_weight"
                        app:layout_constraintEnd_toEndOf="@id/produce_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:text="@string/tonnes"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="8dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gross_price_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/gross_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/produce_gross_price"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="20000.00 INR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loyalty_factor_text"
                    app:layout_constraintTop_toBottomOf="@id/gross_price_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:textColor="@color/primary_green"
                    tools:text="Applied loyalty index : 1.12"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sellProduceCta"
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell_my_produce"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_8dp"
        android:backgroundTint="@color/primary_green"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <FrameLayout
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>